Actions
Bug #8198
closedacct: misleading-indentation
Start date:
2017-05-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Building with gcc 6:
devtolin.c: In function 'devtolin': devtolin.c:106:4: error: this 'else' clause does not guard... [-Werror=misleading-indentation] } else ^~~~ devtolin.c:115:3: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else' return("?"); ^~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c9d5afdc0f8c07fde3eb4c16c95f43e3b72b493a
commit c9d5afdc0f8c07fde3eb4c16c95f43e3b72b493a Author: Toomas Soome <tsoome@me.com> Date: 2017-05-17T11:16:52.000Z 8198 acct: misleading-indentation Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions